[gd_scene load_steps=44 format=3 uid="uid://d3enmgukpppw2"]

[ext_resource type="Texture2D" uid="uid://dxk2uqgm5rvv4" path="res://Free/Background/Green.png" id="1_7hsgu"]
[ext_resource type="Texture2D" uid="uid://cx73o4wqi4vlq" path="res://Free/Terrain/Terrain (16x16).png" id="1_458jc"]
[ext_resource type="Script" uid="uid://bwy1o53clqfoq" path="res://Game.gd" id="1_ek3jp"]
[ext_resource type="Script" uid="uid://qj33tf6pdyaq" path="res://PauseMenu.gd" id="2_yx171"]
[ext_resource type="Texture2D" uid="uid://lvpp8qwijfvt" path="res://Free/Main Characters/Ninja Frog/Idle (32x32).png" id="3_2f1ap"]
[ext_resource type="Script" uid="uid://uubrie0nddgh" path="res://Character.gd" id="3_ckdkg"]
[ext_resource type="Texture2D" uid="uid://cilr6252di41q" path="res://Free/Main Characters/Ninja Frog/Run (32x32).png" id="4_b2qj6"]
[ext_resource type="Texture2D" uid="uid://bktjeqec3jn85" path="res://Free/Main Characters/Ninja Frog/Jump (32x32).png" id="5_fk0c8"]
[ext_resource type="AudioStream" uid="uid://d3bfwjy31qnkr" path="res://audio/idea_Sun_Jun_01_2025.mp3" id="8_2vekm"]
[ext_resource type="PackedScene" uid="uid://co1yt34h4tjem" path="res://Apple.tscn" id="9_2vekm"]
[ext_resource type="PackedScene" uid="uid://duin2jol2yh0n" path="res://GameScene.tscn" id="11_gwjdr"]
[ext_resource type="AudioStream" uid="uid://bofe4loqhs3gv" path="res://audio/coin-recieved-230517.mp3" id="12_gwjdr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5dg1y"]
texture = ExtResource("1_458jc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.08264, -6.99355, -6.99356, 8, 8, 8, 8, -7.08264)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.99356, 8, -6.99355, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.99356, 7.08264, -7.08264, 6.90446, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_ors3o"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5dg1y")

[sub_resource type="AtlasTexture" id="AtlasTexture_s8upe"]
atlas = ExtResource("3_2f1ap")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_te6jo"]
atlas = ExtResource("3_2f1ap")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaiap"]
atlas = ExtResource("3_2f1ap")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwwic"]
atlas = ExtResource("3_2f1ap")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1h8g"]
atlas = ExtResource("3_2f1ap")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ri4f"]
atlas = ExtResource("3_2f1ap")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy8ke"]
atlas = ExtResource("3_2f1ap")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ogv"]
atlas = ExtResource("3_2f1ap")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_laq2a"]
atlas = ExtResource("3_2f1ap")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc2cj"]
atlas = ExtResource("3_2f1ap")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0v2y"]
atlas = ExtResource("3_2f1ap")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk6mt"]
atlas = ExtResource("5_fk0c8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v678a"]
atlas = ExtResource("4_b2qj6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ery"]
atlas = ExtResource("4_b2qj6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfpvx"]
atlas = ExtResource("4_b2qj6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq1sm"]
atlas = ExtResource("4_b2qj6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woswd"]
atlas = ExtResource("4_b2qj6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6kjq"]
atlas = ExtResource("4_b2qj6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsq0r"]
atlas = ExtResource("4_b2qj6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pywql"]
atlas = ExtResource("4_b2qj6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcgjv"]
atlas = ExtResource("4_b2qj6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24whr"]
atlas = ExtResource("4_b2qj6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8g31"]
atlas = ExtResource("4_b2qj6")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8nww"]
atlas = ExtResource("4_b2qj6")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mufw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8upe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te6jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaiap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwwic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ri4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy8ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ogv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laq2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc2cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0v2y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk6mt")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v678a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ery")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfpvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq1sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woswd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6kjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsq0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pywql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcgjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24whr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8g31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8nww")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vqn8"]
size = Vector2(24.6331, 24.6624)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_poxpa"]
size = Vector2(24, 24.2)

[sub_resource type="SystemFont" id="SystemFont_gwjdr"]

[sub_resource type="LabelSettings" id="LabelSettings_joorw"]
font = SubResource("SystemFont_gwjdr")
font_size = 35

[node name="Game" type="Node"]
script = ExtResource("1_ek3jp")

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
anchors_preset = -1
anchor_right = 1.033
anchor_bottom = 1.037
offset_left = 1.0
offset_top = -1.0
offset_right = -41.24
offset_bottom = -26.64
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7hsgu")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_ors3o")
format = 2
layer_0/tile_data = PackedInt32Array(786432, 393216, 0, 851968, 393216, 1, 917504, 393216, 2, 786433, 458752, 0, 851969, 458752, 1, 917505, 458752, 2, 786434, 524288, 0, 851970, 524288, 1, 917506, 524288, 2, 786435, 393216, 0, 851971, 393216, 1, 917507, 393216, 2, 786436, 458752, 0, 851972, 458752, 1, 917508, 458752, 2, 786437, 524288, 0, 851973, 524288, 1, 917509, 524288, 2, 786438, 393216, 0, 851974, 393216, 1, 917510, 393216, 2, 786439, 458752, 0, 851975, 458752, 1, 917511, 458752, 2, 786440, 524288, 0, 851976, 524288, 1, 917512, 524288, 2, 786441, 393216, 0, 851977, 393216, 1, 917513, 393216, 2, 786442, 458752, 0, 851978, 458752, 1, 917514, 458752, 2, 786443, 524288, 0, 851979, 524288, 1, 917515, 524288, 2, 786444, 393216, 0, 851980, 393216, 1, 917516, 393216, 2, 786445, 458752, 0, 851981, 458752, 1, 917517, 458752, 2, 786446, 524288, 0, 851982, 524288, 1, 917518, 524288, 2, 786447, 393216, 0, 851983, 393216, 1, 917519, 393216, 2, 786448, 458752, 0, 851984, 458752, 1, 917520, 458752, 2, 786449, 524288, 0, 851985, 524288, 1, 917521, 524288, 2, 786450, 393216, 0, 851986, 393216, 1, 917522, 393216, 2, 786451, 458752, 0, 851987, 458752, 1, 917523, 458752, 2, 786452, 524288, 0, 851988, 524288, 1, 917524, 524288, 2, 786453, 393216, 0, 851989, 393216, 1, 917525, 393216, 2, 786454, 458752, 0, 851990, 458752, 1, 917526, 458752, 2, 786455, 524288, 0, 851991, 524288, 1, 917527, 524288, 2, 786456, 393216, 0, 851992, 393216, 1, 917528, 393216, 2, 786457, 458752, 0, 851993, 458752, 1, 917529, 458752, 2, 786458, 524288, 0, 851994, 524288, 1, 917530, 524288, 2)

[node name="Character" type="CharacterBody2D" parent="."]
position = Vector2(571, 296)
scale = Vector2(4.5, 5)
script = ExtResource("3_ckdkg")

[node name="Personnage" type="AnimatedSprite2D" parent="Character"]
texture_filter = 1
position = Vector2(0.999997, -2.3)
scale = Vector2(0.965278, 0.98125)
sprite_frames = SubResource("SpriteFrames_mufw0")
animation = &"run"

[node name="AreaCharacter" type="Area2D" parent="Character/Personnage" groups=["Character"]]
position = Vector2(-0.444443, 1.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Personnage/AreaCharacter"]
position = Vector2(-0.476395, -0.584713)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_1vqn8")
one_way_collision = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
position = Vector2(0.222221, -1.3)
shape = SubResource("RectangleShape2D_poxpa")
one_way_collision = true

[node name="MarginContainer" type="MarginContainer" parent="."]
physics_interpolation_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.091
offset_left = -20.32
offset_top = -65.0
offset_right = 1.0
offset_bottom = -66.52

[node name="MusicAttrap" type="AudioStreamPlayer2D" parent="."]
position = Vector2(572, 281.5)
scale = Vector2(4.5, 5)
stream = ExtResource("8_2vekm")

[node name="Score" type="Label" parent="."]
offset_left = 903.0
offset_top = 65.0
offset_right = 1044.0
offset_bottom = 123.0
text = "Score : 0"
label_settings = SubResource("LabelSettings_joorw")

[node name="NodeApple" parent="." instance=ExtResource("9_2vekm")]

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_yx171")

[node name="MenuBox" type="Control" parent="PauseMenu"]
layout_mode = 3
anchors_preset = 0
offset_right = 1194.0
offset_bottom = 661.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MenuBox"]
layout_mode = 0
offset_left = 203.0
offset_top = 305.0
offset_right = 984.0
offset_bottom = 464.0

[node name="ResumeButton" type="Button" parent="PauseMenu/MenuBox/VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[node name="MainMenuButton" type="Button" parent="PauseMenu/MenuBox/VBoxContainer"]
layout_mode = 2
text = "Menu Principal
"

[node name="QuitButton" type="Button" parent="PauseMenu/MenuBox/VBoxContainer"]
process_mode = 1
layout_mode = 2
text = "Quitter le jeu
"

[node name="Timer" parent="." instance=ExtResource("11_gwjdr")]
position = Vector2(83, 80)

[node name="AppleCollected" type="AudioStreamPlayer2D" parent="."]
position = Vector2(572, 281.5)
scale = Vector2(4.5, 5)
stream = ExtResource("12_gwjdr")

[connection signal="child_exiting_tree" from="Character" to="." method="_on_character_child_exiting_tree"]
[connection signal="body_entered" from="Character/Personnage/AreaCharacter" to="." method="_on_area_character_body_entered"]
[connection signal="pressed" from="PauseMenu/MenuBox/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/MenuBox/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/MenuBox/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
